infrastructure/config/eda/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: eda
  labels:
    app.kubernetes.io/name: eda
